backend/compile_errors_utf8.txt
    Checking hostelhub_backend v0.1.0 (D:\projects\HostelHub\backend)
error[E0277]: the trait bound `for<'r> User: FromRow<'r, _>` is not satisfied
   --> src\auth\handlers.rs:61:52
    |
 61 |     let record: Option<User> = sqlx::query_as::<_, User>(
    |                                                    ^^^^ unsatisfied trait bound
    |
help: the trait `for<'r> FromRow<'r, _>` is not implemented for `User`
   --> src\models.rs:6:1
    |
  6 | pub struct User {
    | ^^^^^^^^^^^^^^^
    = help: the following other types implement trait `FromRow<'r, R>`:
              ()
              (T1, T2)
              (T1, T2, T3)
              (T1, T2, T3, T4)
              (T1, T2, T3, T4, T5)
              (T1, T2, T3, T4, T5, T6)
              (T1, T2, T3, T4, T5, T6, T7)
              (T1, T2, T3, T4, T5, T6, T7, T8)
            and 9 others
note: required by a bound in `sqlx::query_as`
   --> C:\Users\pranj\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0.7.4\src\query_as.rs:345:8
    |
342 | pub fn query_as<'q, DB, O>(sql: &'q str) -> QueryAs<'q, DB, O, <DB as HasArguments<'q>>::Arguments>
    |        -------- required by a bound in this function
...
345 |     O: for<'r> FromRow<'r, DB::Row>,
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `query_as`

error[E0599]: the method `fetch_optional` exists for struct `QueryAs<'_, _, User, _>`, but its trait bounds were not satisfied
  --> src\auth\handlers.rs:65:6
   |
61 |       let record: Option<User> = sqlx::query_as::<_, User>(
   |  ________________________________-
62 | |         r#"SELECT id, name, email, password_hash, created_at FROM users WHERE email = $1"#
63 | |     )
64 | |     .bind(&payload.email)
65 | |     .fetch_optional(&state.db)
   | |     -^^^^^^^^^^^^^^ method cannot be called on `QueryAs<'_, _, User, _>` due to unsatisfied trait bounds
   | |_____|
   |
   |
  ::: src\models.rs:6:1
   |
 6 |   pub struct User {
   |   --------------- doesn't satisfy `User: FromRow<'r, _>`
   |
   = note: the following trait bounds were not satisfied:
           `User: FromRow<'r, _>`

error[E0282]: type annotations needed
  --> src\auth\handlers.rs:61:32
   |
61 |       let record: Option<User> = sqlx::query_as::<_, User>(
   |  ________________________________^
62 | |         r#"SELECT id, name, email, password_hash, created_at FROM users WHERE email = $1"#
63 | |     )
64 | |     .bind(&payload.email)
65 | |     .fetch_optional(&state.db)
66 | |     .await
   | |__________^ cannot infer type

error[E0277]: the trait bound `for<'r> User: FromRow<'r, _>` is not satisfied
   --> src\auth\handlers.rs:95:52
    |
 95 |     let record: Option<User> = sqlx::query_as::<_, User>(
    |                                                    ^^^^ unsatisfied trait bound
    |
help: the trait `for<'r> FromRow<'r, _>` is not implemented for `User`
   --> src\models.rs:6:1
    |
  6 | pub struct User {
    | ^^^^^^^^^^^^^^^
    = help: the following other types implement trait `FromRow<'r, R>`:
              ()
              (T1, T2)
              (T1, T2, T3)
              (T1, T2, T3, T4)
              (T1, T2, T3, T4, T5)
              (T1, T2, T3, T4, T5, T6)
              (T1, T2, T3, T4, T5, T6, T7)
              (T1, T2, T3, T4, T5, T6, T7, T8)
            and 9 others
note: required by a bound in `sqlx::query_as`
   --> C:\Users\pranj\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0.7.4\src\query_as.rs:345:8
    |
342 | pub fn query_as<'q, DB, O>(sql: &'q str) -> QueryAs<'q, DB, O, <DB as HasArguments<'q>>::Arguments>
    |        -------- required by a bound in this function
...
345 |     O: for<'r> FromRow<'r, DB::Row>,
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `query_as`

error[E0599]: the method `fetch_optional` exists for struct `QueryAs<'_, Postgres, User, PgArguments>`, but its trait bounds were not satisfied
  --> src\auth\handlers.rs:99:6
   |
95 |       let record: Option<User> = sqlx::query_as::<_, User>(
   |  ________________________________-
96 | |         "SELECT id, name, email, password_hash, created_at FROM users WHERE id = $1"
97 | |     )
98 | |     .bind(uuid)
99 | |     .fetch_optional(&state.db)
   | |     -^^^^^^^^^^^^^^ method cannot be called on `QueryAs<'_, Postgres, User, PgArguments>` due to unsatisfied trait bounds
   | |_____|
   |
   |
  ::: src\models.rs:6:1
   |
 6 |   pub struct User {
   |   --------------- doesn't satisfy `User: FromRow<'r, PgRow>`
   |
   = note: the following trait bounds were not satisfied:
           `User: FromRow<'r, PgRow>`

error[E0282]: type annotations needed
   --> src\auth\handlers.rs:95:32
    |
 95 |       let record: Option<User> = sqlx::query_as::<_, User>(
    |  ________________________________^
 96 | |         "SELECT id, name, email, password_hash, created_at FROM users WHERE id = $1"
 97 | |     )
 98 | |     .bind(uuid)
 99 | |     .fetch_optional(&state.db)
100 | |     .await
    | |__________^ cannot infer type

Some errors have detailed explanations: E0277, E0282, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `hostelhub_backend` (bin "hostelhub_backend") due to 6 previous errors
